kubernetes-manifests/catalog.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "catalog-deployment"
  namespace: "default"
  labels:
    app: "catalog"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "catalog"
  template:
    metadata:
      labels:
        app: "catalog"
    spec:
      serviceAccountName: "k8s-service-account"
      containers:
      - name: "catalog-service"
        image: "gcr.io/serverless-k8s-study/catalog-service"
        ports:
          - containerPort: 8080
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "catalog-service"
  namespace: "default"
  labels:
    app: "catalog"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "catalog"
  type: "ClusterIP"
