kubernetes-manifests/customer.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "customer-deployment"
  namespace: "default"
  labels:
    app: "customer"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "customer"
  template:
    metadata:
      labels:
        app: "customer"
    spec:
      serviceAccountName: "k8s-service-account"
      containers:
      - name: "customer-service-sha256-1"
        image: "gcr.io/serverless-k8s-study/customer-service"
        ports:
          - containerPort: 8080
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "customer-service"
  namespace: "default"
  labels:
    app: "customer"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "customer"
  type: "ClusterIP"
