kubernetes-manifests/inventory-opt.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "inventory-opt-deployment"
  namespace: "default"
  labels:
    app: "inventory-opt"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "inventory-opt"
  template:
    metadata:
      labels:
        app: "inventory-opt"
    spec:
      serviceAccountName: "k8s-service-account"
      containers:
      - name: "inventory-opt-service"
        image: "gcr.io/serverless-k8s-study/inventory-opt-service"
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        ports:
          - containerPort: 8080
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "inventory-opt-service"
  namespace: "default"
  labels:
    app: "inventory-opt"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "inventory-opt"
  type: "ClusterIP"
