kubernetes-manifests/order.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "order-deployment"
  namespace: "default"
  labels:
    app: "order"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "order"
  template:
    metadata:
      labels:
        app: "order"
    spec:
      serviceAccountName: "k8s-service-account"
      containers:
      - name: "order-service"
        image: "gcr.io/serverless-k8s-study/order-service"
        resources:
          requests:
            memory: "768Mi"
            cpu: "250m"
          limits:
            memory: "1.5Gi"
            cpu: "500m"
        ports:
          - containerPort: 8080
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "order-service"
  namespace: "default"
  labels:
    app: "order"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "order"
  type: "ClusterIP"
